updating links to test links

--- a/giving-charity-information-donors/donate-wisely-avoid-fraud.html
+++ b/giving-charity-information-donors/donate-wisely-avoid-fraud.html
@@ -366,8 +366,8 @@ How to donate wisely and avoid fraud</h1>
         <h2>Related services and information</h2>
 <ul>
 <li><a href="/canadasite/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts.html">Issuing receipt</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts.html">Receiving gift</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html" style="background-color: rgb(255, 255, 255);">How to get information about a charity</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts.html">Receiving gift</a></li>
+<li><a href="https://cra-design.github.io/charities/information-about-a-charity.html" style="background-color: rgb(255, 255, 255);">How to get information about a charity</a></li>
 </ul>
 
     
