--- a/giving-charity-information-donors/giving-charity-information-donors.html
+++ b/giving-charity-information-donors/giving-charity-information-donors.html
@@ -290,7 +290,7 @@ Giving to charity</h1>
 
 <section class="alert alert-info">
 	<h2>The information in this section is for donors</h2>
-	<p>If you are a registered charity, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts.html">Issuing receipts</a> or <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts.html">Receiving gifts</a>.</p>
+	<p>If you are a registered charity, go to <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts.html">Issuing receipts</a> or <a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts.html">Receiving gifts</a>.</p>
 </section>
 
 
@@ -305,8 +305,8 @@ Giving to charity</h1>
 
 <section class="alert alert-danger">
 	<h2 class="h3">Extension for making 2024 charitable donations to February 28, 2025</h2>
-	<p>The <abbr title="Canada Revenue Agency">CRA</abbr> is administering the extension for 2024 charitable donations. This extends the deadline for making donations eligible for tax support in the 2024 tax year to <span class="nowrap">February 28, 2025</span>. Charities and other qualified donees should continue to issue official donation receipts according to the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts.html">receipting rules</a>.</p>
-<p>For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/extension-charitable-donations-2024.html">Extension of the deadline for making 2024 charitable donations</a>.</p>
+	<p>The <abbr title="Canada Revenue Agency">CRA</abbr> is administering the extension for 2024 charitable donations. This extends the deadline for making donations eligible for tax support in the 2024 tax year to <span class="nowrap">February 28, 2025</span>. Charities and other qualified donees should continue to issue official donation receipts according to the <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts.html">receipting rules</a>.</p>
+<p>For more information, go to <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/extension-charitable-donations-2024.html">Extension of the deadline for making 2024 charitable donations</a>.</p>
 
 </section>
 
@@ -512,7 +512,7 @@ Giving to charity</h1>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/about-registered-charities.html">About registered charities</a></li>
 </ul>
 
