--- a/guidance-videos-forms/request-charities-listings.html
+++ b/guidance-videos-forms/request-charities-listings.html
@@ -17,8 +17,8 @@
 
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/guidance-videos-forms/request-charities-listings.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/guidance-videos-forms/request-charities-listings.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/guidance-videos-forms/request-charities-listings.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/guidance-videos-forms/request-charities-listings.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/directrices-videos-formulaires/demande-liste-organismes-bienfaisance.html"/>
 	
@@ -174,7 +174,7 @@
       <li><a href="/en.html">Canada.ca</a></li>
       <li><a href="https://www.canada.ca/en/services/taxes.html">Taxes</a></li>
       <li><a href="https://www.canada.ca/en/services/taxes/charities.html">Charities</a></li>
-      <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a></li>
+      <li><a href="https://cra-design.github.io/charities/information-about-a-charity.html">How to get information about a charity</a></li>
     </ol>
   </div>
 </nav>
