--- a/guidance-videos-forms/request-registered-charity-information.html
+++ b/guidance-videos-forms/request-registered-charity-information.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/request-registered-charity-information.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/request-registered-charity-information.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/request-registered-charity-information.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/demande-renseignements-organisme-bienfaisance-enregistre.html"/>
 	
@@ -284,7 +284,7 @@ Request for registered charity information</h1>
     
         <p>Use this form to make an <strong>informal request</strong> for registered charity information that is <strong>not</strong> in the <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities</a>.</p>
 <p>To access public portions of a T3010, Registered Charity Information Return, and financial information, go to <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of charities</a>.</p>
-<p>For a list of information you can request, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/information-about-a-charity.html">How to get information about a charity</a>.</p>
+<p>For a list of information you can request, go to <a href="https://cra-design.github.io/charities/information-about-a-charity.html">How to get information about a charity</a>.</p>
 <p>If you are a <strong>member of the media</strong>, contact a <a href="https://www.canada.ca/en/revenue-agency/news/newsroom/media-contact-list.html">media relations representative</a>.</p>
 
     
