--- a/guidance-videos-forms/technical-working-issues-group.html
+++ b/guidance-videos-forms/technical-working-issues-group.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/guidance-videos-forms/technical-working-issues-group.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/guidance-videos-forms/technical-working-issues-group.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/guidance-videos-forms/technical-working-issues-group.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/guidance-videos-forms/technical-working-issues-group.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/directrices-videos-formulaires/groupe-travail-questions-techniques.html"/>
 	
