--- a/guidance-videos-forms/toolbox-directors-officers-volunteers/maintaining-charitable-registration.html
+++ b/guidance-videos-forms/toolbox-directors-officers-volunteers/maintaining-charitable-registration.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/about-charities-directorate.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/about-charities-directorate.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/a-propos-direction-organismes-bienfaisance.html"/>
 	
@@ -289,12 +289,12 @@ About the Charities Directorate</h1>
     
         <h2>Topics</h2>
 <ul class="list-group">
-<li class="list-group-item"><strong><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate/who-we.html">Who we are</a></strong></li>
+<li class="list-group-item"><strong><a href="https://cra-design.github.io/charities/about-charities-directorate/who-we.html">Who we are</a></strong></li>
 <li class="list-group-item"><strong><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/service-standards-cra.html">Our service standards</a> </strong></li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate/report-on-charities-program.html"><strong>Report on the Charities Program</strong></a></li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate/political-activities-consultation.html"><strong>Consultation process on political activities - 2016 to 2017</strong></a></li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/about-charities-directorate/what-we-heard.html"><strong>Consultation: What we heard on CRA's communication - 2019<br></strong></a></li>
-<li class="list-group-item"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html"><strong>Contact the Charities Directorate</strong></a></li>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/about-charities-directorate/report-on-charities-program.html"><strong>Report on the Charities Program</strong></a></li>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/about-charities-directorate/political-activities-consultation.html"><strong>Consultation process on political activities - 2016 to 2017</strong></a></li>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/about-charities-directorate/what-we-heard.html"><strong>Consultation: What we heard on CRA's communication - 2019<br></strong></a></li>
+<li class="list-group-item"><a href="https://cra-design.github.io/charities/contact-charities-directorate.html"><strong>Contact the Charities Directorate</strong></a></li>
 </ul>
 
     
