--- a/guidance-videos-forms/toolbox-directors-officers-volunteers/toolbox-directors-officers-volunteers.html
+++ b/guidance-videos-forms/toolbox-directors-officers-volunteers/toolbox-directors-officers-volunteers.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/boite-a-outils-administrateurs-dirigeants-benevoles.html"/>
 	
@@ -285,11 +285,11 @@ Toolbox for directors, officers, and volunteers</h1>
     
         <p>The following is a list of resources that will help directors, officers and volunteers understand the requirements and obligations of maintaining charitable status:</p>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers/important-links-directors-officers-volunteers.html">Links to important information on the Charities and giving webpages</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers/maintaining-charitable-registration.html">Maintaining charitable registration (Resource manual)</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/business-account.html">Access our online services for charities</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/sample-official-donation-receipts.html">Sample official donation receipts</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html">Glossary</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers/important-links-directors-officers-volunteers.html">Links to important information on the Charities and giving webpages</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/toolbox-directors-officers-volunteers/maintaining-charitable-registration.html">Maintaining charitable registration (Resource manual)</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/business-account.html">Access our online services for charities</a></li>
+<li><a href="https://cra-design.github.io/charities/sample-official-donation-receipts.html">Sample official donation receipts</a></li>
+<li><a href="https://cra-design.github.io/charities/charities-giving-glossary.html">Glossary</a></li>
 </ul>
 
     
