--- a/operating-a-registered-charity/filing-t3010-charity-return.html
+++ b/operating-a-registered-charity/filing-t3010-charity-return.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/produire-bienfaisance-enregistres-t3010.html"/>
 	
@@ -293,22 +293,22 @@ Filing a Registered Charity Information Return (T3010)</h1>
     <nav class="provisional gc-subway no-blink brdr-0">
     <h2>Sections</h2>
             <dl>
-                <dt><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html">Who needs to file</a></dt>
+                <dt><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html">Who needs to file</a></dt>
                 <dd>All registered charities must file their annual T3010 return.</dd>
                 <dt>
-                    <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">When to file</a>
+                    <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">When to file</a>
                 </dt>
                 <dd>File your return within six months of your fiscal year end.</dd>
                 <dt>
-                    <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a>
+                    <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a>
                 </dt>
                 <dd>Check to make sure your return is complete.</dd>
                 <dt>
-                    <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">How to file</a>
+                    <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">How to file</a>
                 </dt>
                 <dd>Submit your return online or by mail.</dd>
 				<dt>
-                    <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html">After you file</a>
+                    <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html">After you file</a>
                 </dt>
                 <dd>How to amend your return.</dd>
             </dl>
