--- a/operating-a-registered-charity/filing-t3010-charity-return/after-file.html
+++ b/operating-a-registered-charity/filing-t3010-charity-return/after-file.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/produire-bienfaisance-enregistres-t3010/apres-produire.html"/>
 	
@@ -275,15 +275,15 @@
     <nav class="provisional gc-subway" aria-label="Sections">
     <h1 id="gc-document-nav">Filing a Registered Charity Information Return (T3010)</h1>
     <ul>
-        <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html">Who needs to file</a></li>
+        <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html">Who needs to file</a></li>
         <li>   
-            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">When to file</a>
+            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">When to file</a>
         </li>
         <li>
-           <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a>
+           <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a>
         </li>
         <li>
-            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">How to file</a>
+            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">How to file</a>
         </li>
         <li>
             <a class="active" aria-current="page">After you file</a>
@@ -325,7 +325,7 @@
 <li><h3 id="step-2">Send the request</h3>
 <div class="mwsgeneric-base-html parbase section"><dl class="dl-horizontal brdr-0">
 <dt>Online:</dt> <dd><p>Sign in to My Business Account and select &quot;Adjust a return.&quot;</p>
-<div class="mrgn-tp-lg"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to My Business Account</a><span class="register"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/business-account.html" class="mrgn-tp-lg mrgn-lft-md"><strong>Register</strong></a>&nbsp;for My Business Account</span></div>
+<div class="mrgn-tp-lg"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to My Business Account</a><span class="register"><a href="https://cra-design.github.io/charities/operating-a-registered-charity/business-account.html" class="mrgn-tp-lg mrgn-lft-md"><strong>Register</strong></a>&nbsp;for My Business Account</span></div>
 <div class="mrgn-tp-lg">Refer to the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/hours-service.html" style="background-color: rgb(245, 245, 245);">hours for online services</a>.<br></div>
 </dd> <dt>By mail:</dt><dd>Charities Directorate <br>
  Canada Revenue Agency <br>
@@ -333,7 +333,7 @@
 </div>
 </li>
 </ol>
-<p>If you have questions about amending your return, you can <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html" style="background-color: rgb(255, 255, 255);">contact the Charities Directorate</a>.</p>
+<p>If you have questions about amending your return, you can <a href="https://cra-design.github.io/charities/contact-charities-directorate.html" style="background-color: rgb(255, 255, 255);">contact the Charities Directorate</a>.</p>
 <h3>If your charity received approval for a disbursement quota reduction</h3>
 <p>If you received approval for a disbursement quota reduction, you must also file <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1240.html">Form T1240, Registered Charity Adjustment Request</a>, to correct the return for the fiscal period the shortfall occurred in.</p>
 
