--- a/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html
+++ b/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/produire-bienfaisance-enregistres-t3010/comment-produire.html"/>
 	
@@ -275,18 +275,18 @@
     <nav class="provisional gc-subway" aria-label="Sections">
     <h1 id="gc-document-nav">Filing a Registered Charity Information Return (T3010)</h1>
     <ul>
-        <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html">Who needs to file</a></li>
+        <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html">Who needs to file</a></li>
         <li>   
-            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">When to file</a>
+            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">When to file</a>
         </li>
         <li>
-           <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a>
+           <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a>
         </li>
         <li>
             <a class="active" aria-current="page">How to file</a>
         </li>
         <li>
-            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html">After you file</a>
+            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html">After you file</a>
         </li>
       </ul>
 </nav>
@@ -316,12 +316,12 @@
 <p>Filing online with My Business Account (MyBA) helps to identify all necessary forms, sections, schedules and appendices, and reminds you to attach required documentation.</p>
 <dl class="dl-horizontal brdr-0">
 <dt>Online:</dt> <dd><p>Submit your T3010 Return using MyBA and selecting &quot;File a return&quot;.</p>
-<p>Before filing your T3010 return,&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-address-phone-number.html">make sure your contact information is still valid</a>.&nbsp;</p>
-<div class="mrgn-tp-lg"><a class="btn btn-call-to-action" href="https://canada-preview.adobecqms.net/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to My Business Account</a> <span class="register"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/business-account.html" class="mrgn-tp-lg mrgn-lft-md">Register</a></span></div>
+<p>Before filing your T3010 return,&nbsp;<a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/changing-a-charitys-address-phone-number.html">make sure your contact information is still valid</a>.&nbsp;</p>
+<div class="mrgn-tp-lg"><a class="btn btn-call-to-action" href="https://canada-preview.adobecqms.net/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to My Business Account</a> <span class="register"><a href="https://cra-design.github.io/charities/operating-a-registered-charity/business-account.html" class="mrgn-tp-lg mrgn-lft-md">Register</a></span></div>
 <p>Refer to the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/help-cra-sign-in-services/sign-in-services-availability.html">hours for online services</a>.</p>
 </dd> <dt>By mail:</dt> <dd><details><summary>Send in your T3010 Return</summary><ol>
 <li>Get the latest version of <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t3010.html">Form T3010</a></li>
-<li>Check to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html#h-1">make sure your return is complete</a> and that you have reviewed the additional details for filing a paper return</li>
+<li>Check to <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html#h-1">make sure your return is complete</a> and that you have reviewed the additional details for filing a paper return</li>
 <li>Mail your return:<p>Charities Directorate<br>
 Canada Revenue Agency<br>
 105-275 Pope Road<br>
@@ -330,7 +330,7 @@ Summerside PE&nbsp; C1N 6E8</p>
 </ol>
 <p>When your return is mailed, the postmark date indicated on the envelope is used as the date received.</p>
 </details></dd></dl>
-<div class="mwsbodytext text parbase section"><p>If you have questions about the online return, you can <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
+<div class="mwsbodytext text parbase section"><p>If you have questions about the online return, you can <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p>
 </div>
 
     
@@ -362,7 +362,7 @@ Summerside PE&nbsp; C1N 6E8</p>
 <div class="col-md-8">
 <ul class="pager">
 
-<li class="next"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html" rel="next"><span class="wb-inv">Next: </span>After you file</a></li>
+<li class="next"><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html" rel="next"><span class="wb-inv">Next: </span>After you file</a></li>
 </ul>
 </div>
 </div>
