--- a/operating-a-registered-charity/filing-t3010-charity-return/when-file.html
+++ b/operating-a-registered-charity/filing-t3010-charity-return/when-file.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/produire-bienfaisance-enregistres-t3010/quand-produire.html"/>
 	
@@ -275,11 +275,11 @@
     <nav class="provisional gc-subway" aria-label="Sections"> 
  <h1 id="gc-document-nav">Filing a Registered Charity Information Return (T3010)</h1> 
  <ul> 
-  <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html">Who needs to file</a></li> 
+  <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html">Who needs to file</a></li> 
   <li> <a class="active" aria-current="page">When to file</a> </li> 
-  <li> <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a> </li> 
-  <li> <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">How to file</a> </li> 
-  <li> <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html">After you file</a> </li> 
+  <li> <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a> </li> 
+  <li> <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">How to file</a> </li> 
+  <li> <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html">After you file</a> </li> 
  </ul> 
 </nav> 
 <h1 class="mrgn-tp-0" id="wb-cont">When to file<span class="wb-inv"> – Filing a Registered Charity Information Return (T3010)</span></h1>
@@ -369,7 +369,7 @@
 <ul>
 <li>can no longer issue official donation receipts</li>
 <li>are no longer exempt from paying income tax</li>
-<li>must give all of your remaining assets to an <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#eligdon">eligible donee</a> or pay a revocation tax equal to the full value of your assets</li>
+<li>must give all of your remaining assets to an <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#eligdon">eligible donee</a> or pay a revocation tax equal to the full value of your assets</li>
 </ul>
 
     
@@ -401,7 +401,7 @@
 <div class="col-md-8">
 <ul class="pager">
 
-<li class="next"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html" rel="next"><span class="wb-inv">Next: </span>Before you file</a></li>
+<li class="next"><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html" rel="next"><span class="wb-inv">Next: </span>Before you file</a></li>
 </ul>
 </div>
 </div>
