--- a/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html
+++ b/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/who-needs.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/produire-bienfaisance-enregistres-t3010/qui-doit.html"/>
 	
@@ -277,16 +277,16 @@
     <ul>
         <li><a class="active" aria-current="page">Who needs to file</a></li>
         <li>
-            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">When to file</a>
+            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html">When to file</a>
         </li>
         <li>
-            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a>
+            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html">Before you file</a>
         </li>
         <li>
-            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">How to file</a>
+            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/how-to-file.html">How to file</a>
         </li>
         <li>
-            <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html">After you file</a>
+            <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/after-file.html">After you file</a>
         </li>
       </ul>
 </nav>
@@ -334,7 +334,7 @@
 </details></li>
 <li><details><summary>If your charity is no longer operating</summary><p>You must still file a complete T3010 return.</p>
 <p>If you do not plan to resume your charitable activities, you should ask for voluntary revocation of your registration. Once revocation is granted, you will no longer have to file a T3010 return for any future fiscal period.</p>
-<p>For more information, go to&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/request-voluntary-revocation.html">Request voluntary revocation</a>.</p>
+<p>For more information, go to&nbsp;<a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/request-voluntary-revocation.html">Request voluntary revocation</a>.</p>
 </details></li>
 </ul>
 
@@ -367,7 +367,7 @@
 <div class="col-md-8">
 <ul class="pager">
 
-<li class="next"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html" rel="next"><span class="wb-inv">Next: </span>When to file</a></li>
+<li class="next"><a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/when-file.html" rel="next"><span class="wb-inv">Next: </span>When to file</a></li>
 </ul>
 </div>
 </div>
