--- a/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees/issuing-receipts-fundraising-events/general-guidelines-fundraising-events-activities.html
+++ b/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees/issuing-receipts-fundraising-events/general-guidelines-fundraising-events-activities.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees/issuing-receipts-fundraising-events/general-guidelines-fundraising-events-activities.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees/issuing-receipts-fundraising-events/general-guidelines-fundraising-events-activities.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees/issuing-receipts-fundraising-events/general-guidelines-fundraising-events-activities.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/fundraising-activities-charities-other-qualified-donees/issuing-receipts-fundraising-events/general-guidelines-fundraising-events-activities.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/activites-financement-organismes-bienfaisance-autres-donataires-reconnus/remise-recus-activites-financement/lignes-directrices-generales-evenements-activites-dinancement.html"/>
 	
@@ -287,7 +287,7 @@ General guidelines for fundraising events or activities</h1>
 <li><a href="#Advantage">Advantages that are the purpose of the event</a></li>
 </ul>
 <p>If you hold a fundraising event for a charity, you <strong>cannot</strong> issue receipts for donations received on behalf of that charity. Only the charity itself can issue receipts for donations. If a charity lends its registration number for receipting purposes, its registration could be revoked.</p>
-<p>To issue a receipt for a fundraising event or activity, you must first determine the value of the benefits provided to all participants. These benefits are considered an <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#advantage">advantage</a> and must be deducted from the amount of the gift before you can issue a receipt for the eligible amount. The method of calculating the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#eligamt">eligible amount</a> of a gift is called <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/split-receipting.html">split receipting</a>.</p>
+<p>To issue a receipt for a fundraising event or activity, you must first determine the value of the benefits provided to all participants. These benefits are considered an <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#advantage">advantage</a> and must be deducted from the amount of the gift before you can issue a receipt for the eligible amount. The method of calculating the <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#eligamt">eligible amount</a> of a gift is called <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/split-receipting.html">split receipting</a>.</p>
 
     
 
@@ -316,7 +316,7 @@ General guidelines for fundraising events or activities</h1>
 <li>a comparable ticket price for a fundraising concert　</li>
 </ul>
 <h3>Other advantages</h3>
-<p>The value of these advantages must be deducted from the amount of the gift to determine the eligible amount unless the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/split-receipting.html#deminimis">de minimis rule</a> applies. Examples:&nbsp;</p>
+<p>The value of these advantages must be deducted from the amount of the gift to determine the eligible amount unless the <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/split-receipting.html#deminimis">de minimis rule</a> applies. Examples:&nbsp;</p>
 <ul>
 <li>door prizes</li>
 <li>complimentary gifts (pens and key chains)</li>
@@ -370,13 +370,13 @@ General guidelines for fundraising events or activities</h1>
     
         <h2>Related links</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/determining-fair-market-value-gifts-kind-non-cash-gifts.html">Determining fair market value</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/determining-fair-market-value-gifts-kind-non-cash-gifts.html">Determining fair market value</a></li>
 </ul>
 <h2>References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/fundraising-registered-charities-guidance.html">CG-013, Fundraising by registered charities</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-026-third-party-fundraisers.html">Policy commentary CPC-026, Third-party fundraisers</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/fundraising-registered-charities-guidance.html">CG-013, Fundraising by registered charities</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-026-third-party-fundraisers.html">Policy commentary CPC-026, Third-party fundraisers</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/income-tax/income-tax-folios-index/series-7-charities-non-profit-organizations/series/income-tax-folio-s7-f1-c1-split-receipting-deemed-fair-market-value.html">S7-F1-C1, Split-receipting and Deemed Fair Market Value</a></li>
 </ul>
 
