--- a/operating-a-registered-charity/issuing-receipts/consequences-improper-receipting.html
+++ b/operating-a-registered-charity/issuing-receipts/consequences-improper-receipting.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/consequences-improper-receipting.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/consequences-improper-receipting.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/consequences-improper-receipting.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/consequences-improper-receipting.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/remise-recus/consequences-remise-incorrecte-recus.html"/>
 	
@@ -303,8 +303,8 @@ Consequences of improper receipting</h1>
     
         <h2>Related Topics</h2>
 <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidelines-applying-sanctions.html">Guidelines for Applying Sanctions</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/penalties-suspensions.html">Penalties - Suspensions Chart</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/guidelines-applying-sanctions.html">Guidelines for Applying Sanctions</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/penalties-suspensions.html">Penalties - Suspensions Chart</a></li> 
 </ul>   
     
 
