--- a/operating-a-registered-charity/issuing-receipts/correcting-replacing-official-donation-receipts.html
+++ b/operating-a-registered-charity/issuing-receipts/correcting-replacing-official-donation-receipts.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/correcting-replacing-official-donation-receipts.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/correcting-replacing-official-donation-receipts.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/correcting-replacing-official-donation-receipts.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/correcting-replacing-official-donation-receipts.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/remise-recus/correction-remplacement-recus-officiels-dons.html"/>
 	
@@ -300,7 +300,7 @@ Correcting or replacing official donation receipts</h1>
     
         <h2 class="h4Size">How can a registered charity replace a receipt?</h2>
  <p>If a registered charity has issued a receipt&nbsp;that was lost or contained incorrect information, the charity can issue a replacement receipt. The replacement receipt must include:</p>  <ul> 
- <li> <p>all the <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/what-information-must-on-official-donation-receipt-a-registered-charity.html">required information</a></p> </li> 
+ <li> <p>all the <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/what-information-must-on-official-donation-receipt-a-registered-charity.html">required information</a></p> </li> 
  <li> <p>the serial number of the original receipt</p> </li> 
  <li> <p>a statement that it replaces the original receipt</p> </li> 
 </ul>  <p>The registered charity should keep its copy of the original receipt and mark "cancelled" on it.</p>  <p>If a registered charity prepared a receipt that contained incorrect information, but has <strong>not</strong> sent it to the donor, the charity can prepare a new receipt. However, the charity must keep both copies of the original receipt and mark “cancelled” on them.</p>   
