--- a/operating-a-registered-charity/issuing-receipts/deemed-fair-market-value-rule.html
+++ b/operating-a-registered-charity/issuing-receipts/deemed-fair-market-value-rule.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/deemed-fair-market-value-rule.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/deemed-fair-market-value-rule.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/deemed-fair-market-value-rule.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/deemed-fair-market-value-rule.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/remise-recus/regle-juste-valeur-marchande-reputee.html"/>
 	
@@ -294,7 +294,7 @@ Deemed fair market value rule</h1>
 
     
         <h2 class="h4Size">What is deemed fair market value?</h2>
- <p>The deemed fair market value rule states that, under certain conditions, a receipt issued for a non-cash gift must be issued for the lesser of the gift's <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/determining-fair-market-value-gifts-kind-non-cash-gifts.html">fair market value</a> and its cost to the donor (or in the case of capital property, its adjusted cost base) immediately before the gift is made. The conditions are as follows:</p>  <ul class="dblSpList"> 
+ <p>The deemed fair market value rule states that, under certain conditions, a receipt issued for a non-cash gift must be issued for the lesser of the gift's <a href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/determining-fair-market-value-gifts-kind-non-cash-gifts.html">fair market value</a> and its cost to the donor (or in the case of capital property, its adjusted cost base) immediately before the gift is made. The conditions are as follows:</p>  <ul class="dblSpList"> 
  <li>the gift was donated to the charity after December 5, 2003; <strong>and</strong></li> 
  <li>the gift received by the charity was initially acquired by the donor as part of a tax shelter arrangement; <strong>or</strong></li> 
  <li>the gift was acquired less than three years before the time of donation; <strong>or</strong></li> 
