--- a/operating-a-registered-charity/issuing-receipts/non-qualified-investments.html
+++ b/operating-a-registered-charity/issuing-receipts/non-qualified-investments.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/non-qualified-investments.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/non-qualified-investments.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/non-qualified-investments.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/non-qualified-investments.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/remise-recus/placements-non-admissibles.html"/>
 	
@@ -402,7 +402,7 @@ Non-qualified investments</h1>
     
         <h2 class="h4Size">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/non-qualified-investment-tax-liability.html" title="Non-qualified investment, CG-006.">Non-qualified investment - Tax liability, CG-006.</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/non-qualified-investment-tax-liability.html" title="Non-qualified investment, CG-006.">Non-qualified investment - Tax liability, CG-006.</a></li> 
  <li>Income Tax Act,R.S.C<em>.</em> 1985 (5<sup>th</sup> supp.) c. 1, ss. 149.1(1) and 189(1)</li> 
 </ul>   
     
