--- a/operating-a-registered-charity/making-changes/associated-status.html
+++ b/operating-a-registered-charity/making-changes/associated-status.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/associated-status.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/associated-status.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/associated-status.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/associated-status.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/apporter-changements/designation-associes.html"/>
 	
@@ -408,7 +408,7 @@ Ottawa ON K1A 0L5</p>
     
         <h2>References</h2>
  <ul> 
- <li> <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-028-associated-status-unrelated-charities.html">CPC-028, Associated Status</a> </li> 
+ <li> <a href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-028-associated-status-unrelated-charities.html">CPC-028, Associated Status</a> </li> 
 </ul>   
     
 
