--- a/operating-a-registered-charity/making-changes/changing-a-charitys-authorized-representative-information.html
+++ b/operating-a-registered-charity/making-changes/changing-a-charitys-authorized-representative-information.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-authorized-representative-information.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-authorized-representative-information.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/changing-a-charitys-authorized-representative-information.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/changing-a-charitys-authorized-representative-information.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/apporter-changements/changement-renseignements-relatifs-representant-autorise-organisme-bienfaisance.html"/>
 	
@@ -339,7 +339,7 @@ Authorize or manage representatives</h1>
 <p>Prepare a letter with the following information:</p>
 <ul>
 <li>charity or applicant organization’s name</li>
-<li>charity or applicant organization’s <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html">registration number</a> (if applicable)</li>
+<li>charity or applicant organization’s <a href="https://cra-design.github.io/charities/operating-a-registered-charity/registration-number.html">registration number</a> (if applicable)</li>
 <li>representative’s name</li>
 <li>representative’s telephone number</li>
 <li>effective date</li>
@@ -380,7 +380,7 @@ Ottawa ON K1A 0L5</p>
         <p>Also be sure to inform us if an authorized representative no longer represents the charity or applicant organization.</p>
 <h2><strong>Related topics</strong></h2>
 <ul>
-<li><p><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-director-trustee-like-official-information.html">Change director</a></p>
+<li><p><a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/changing-a-charitys-director-trustee-like-official-information.html">Change director</a></p>
 </li>
 </ul>
 
