--- a/operating-a-registered-charity/making-changes/fiscal-end-change.html
+++ b/operating-a-registered-charity/making-changes/fiscal-end-change.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/fiscal-end-change.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/fiscal-end-change.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/fiscal-end-change.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/fiscal-end-change.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/apporter-changements/changement-date-fin-exercice.html"/>
 	
@@ -408,10 +408,10 @@ Ottawa ON&nbsp; K1A 0L5</p>
 
     
         <h2><a id="transitionperiod"></a>Filing for the transition period</h2>
-<p>If a registered charity receives approval to change its fiscal year-end, it will have a transition period that is not a full 12 months. Therefore, it must file a separate information return for the months of transition. For example, if the charity's fiscal year-end was originally December 31, and the charity received approval to change it to March 31, one <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html#complete">complete return</a> is required for the original fiscal&nbsp;year of January 1 to December 31, and a separate complete return is required for the transition period from January 1 to March 31.</p>
+<p>If a registered charity receives approval to change its fiscal year-end, it will have a transition period that is not a full 12 months. Therefore, it must file a separate information return for the months of transition. For example, if the charity's fiscal year-end was originally December 31, and the charity received approval to change it to March 31, one <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html#complete">complete return</a> is required for the original fiscal&nbsp;year of January 1 to December 31, and a separate complete return is required for the transition period from January 1 to March 31.</p>
 <p>A registered charity's fiscal&nbsp;year generally should not be more than 12 months.</p>
 <p><strong>A return for the transition period or for the new fiscal&nbsp;year cannot be processed until the change in fiscal year-end has been approved. Therefore, the charity should submit a request as soon as it decides to make the change.</strong></p>
-<p>The charity may also need to amend its governing document if it includes a fiscal year-end (for example, bylaws state the fiscal year-end is December 31, and the charity is changing the fiscal year-end to March 31). We will still process this change; however, the charity must amend the date in its governing documents and submit a certified copy to the Charities Directorate. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-bylaws.html">Change bylaws</a>.</p>
+<p>The charity may also need to amend its governing document if it includes a fiscal year-end (for example, bylaws state the fiscal year-end is December 31, and the charity is changing the fiscal year-end to March 31). We will still process this change; however, the charity must amend the date in its governing documents and submit a certified copy to the Charities Directorate. For more information, go to <a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/changing-a-charitys-bylaws.html">Change bylaws</a>.</p>
 
     
 
