--- a/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html
+++ b/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/questions-answers-about-operating-a-registered-charity.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/questions-reponses-exploitation-organisme-bienfaisance-enregistre.html"/>
 	
@@ -302,13 +302,13 @@ Questions and answers about operating a registered charity</h1>
  <details>
   <summary class="text-primary">When is the registered charity information return due?</summary> 
   <div class="well well-sm panel"> 
-   <p>A charity must file a <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html#complete">complete Form T3010, Registered Charity Information Return</a> every year within six months of its fiscal year-end. For example, the return for a December 31 fiscal year-end is due on or before June 30 of the following year.</p> 
+   <p>A charity must file a <a href="https://cra-design.github.io/charities/operating-a-registered-charity/filing-t3010-charity-return/before-file.html#complete">complete Form T3010, Registered Charity Information Return</a> every year within six months of its fiscal year-end. For example, the return for a December 31 fiscal year-end is due on or before June 30 of the following year.</p> 
   </div> 
  </details> 
  <details>
   <summary class="text-primary">Do the financial statements included with the T3010 return need to be audited?</summary> 
   <div class="well well-sm panel"> 
-   <p>No. The Canada Revenue Agency doesn’t ask that a charity's <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/financial-statements.html">financial statements</a> be audited. However, other government authorities, a charity’s head body, or its funding bodies may want audited statements.</p> 
+   <p>No. The Canada Revenue Agency doesn’t ask that a charity's <a href="https://cra-design.github.io/charities/operating-a-registered-charity/financial-statements.html">financial statements</a> be audited. However, other government authorities, a charity’s head body, or its funding bodies may want audited statements.</p> 
   </div> 
  </details> 
  <details>
@@ -326,25 +326,25 @@ Questions and answers about operating a registered charity</h1>
  <details>
   <summary class="text-primary">Can a charity change its activities after it is registered?</summary> 
   <div class="well well-sm panel"> 
-   <p>Yes. Go to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-purposes.html">Change purposes and activities</a>.</p> 
+   <p>Yes. Go to <a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/changing-a-charitys-purposes.html">Change purposes and activities</a>.</p> 
   </div> 
  </details> 
  <details>
   <summary class="text-primary">How can a charity wrap up its operations?</summary> 
   <div class="well well-sm panel"> 
-   <p>The charity can request <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/revoking-registered-status/types-revocation.html#volrev.html">voluntary revocation</a> of its registration. A charity that plans to merge, amalgamate, or consolidate with another organization should <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact the Charities Directorate</a> before doing so.</p> 
+   <p>The charity can request <a href="https://cra-design.github.io/charities/revoking-registered-status/types-revocation.html#volrev.html">voluntary revocation</a> of its registration. A charity that plans to merge, amalgamate, or consolidate with another organization should <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a> before doing so.</p> 
   </div> 
  </details> 
  <details>
   <summary class="text-primary">What can a charity do if it has not met its charitable spending requirement (disbursement quota)?</summary> 
   <div class="well well-sm panel"> 
-   <p>A spending shortfall can be covered by using spending excesses from any of the previous five fiscal years. If no excesses are available, the charity can try to spend enough in the following year to create an excess that will cover the shortfall. If these options do not resolve the shortfall, the charity may be able to <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/disbursement-quota-reduction.html">ask for a disbursement quota reduction</a>.</p> 
+   <p>A spending shortfall can be covered by using spending excesses from any of the previous five fiscal years. If no excesses are available, the charity can try to spend enough in the following year to create an excess that will cover the shortfall. If these options do not resolve the shortfall, the charity may be able to <a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/disbursement-quota-reduction.html">ask for a disbursement quota reduction</a>.</p> 
   </div> 
  </details> 
  <details>
   <summary class="text-primary">Does a charity have payroll deduction and GST/HST obligations?</summary> 
   <div class="well well-sm panel"> 
-   <p>Charities that have employees generally have payroll deduction obligations. Some charities are required to register for GST/HST purposes, and there is a GST/HST rebate available to registered charities. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll.html">Payroll</a> and <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST checklist</a>.</p> 
+   <p>Charities that have employees generally have payroll deduction obligations. Some charities are required to register for GST/HST purposes, and there is a GST/HST rebate available to registered charities. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll.html">Payroll</a> and <a href="https://cra-design.github.io/charities/checklists-charities/goods-services-tax-harmonized-sales-tax-gst-hst-checklist-charities.html">GST/HST checklist</a>.</p> 
   </div> 
  </details> 
  <details>
@@ -364,7 +364,7 @@ Questions and answers about operating a registered charity</h1>
  <details>
   <summary class="text-primary">What are qualified donees?</summary> 
   <div class="well well-sm panel"> 
-   <p><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#qualdonee">Qualified donees</a> are organizations that can issue official donation receipts for gifts they receive from individuals and corporations. For example, a registered charity is a qualified donee. Registered charities can make gifts only to other qualified donees.</p> 
+   <p><a href="https://cra-design.github.io/charities/charities-giving-glossary.html#qualdonee">Qualified donees</a> are organizations that can issue official donation receipts for gifts they receive from individuals and corporations. For example, a registered charity is a qualified donee. Registered charities can make gifts only to other qualified donees.</p> 
   </div> 
  </details> 
  <details>
@@ -376,7 +376,7 @@ Questions and answers about operating a registered charity</h1>
  <details>
   <summary class="text-primary">How can a charity find out if an organization is registered before gifting to it?</summary> 
   <div class="well well-sm panel"> 
-   <p>Search the&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/list-charities/list-charities-other-qualified-donees.html">List of charities&nbsp;and other qualified donees</a>&nbsp;or <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p> 
+   <p>Search the&nbsp;<a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/list-charities/list-charities-other-qualified-donees.html">List of charities&nbsp;and other qualified donees</a>&nbsp;or <a href="https://cra-design.github.io/charities/contact-charities-directorate.html">contact the Charities Directorate</a>.</p> 
   </div> 
  </details> 
 </section>
