--- a/operating-a-registered-charity/receiving-gifts/gifts-services.html
+++ b/operating-a-registered-charity/receiving-gifts/gifts-services.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/gifts-services.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/gifts-services.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/gifts-services.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/gifts-services.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/reception-dons/dons-services.html"/>
 	
@@ -301,7 +301,7 @@ Gifts of services</h1>
     
         <h2>Reference</h2>
 <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-017-gifts-services.html">CPC-017, Gifts of Services</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-017-gifts-services.html">CPC-017, Gifts of Services</a></li> 
 </ul>   
     
 
