--- a/operating-a-registered-charity/receiving-gifts/returning-a-gift-a-donor.html
+++ b/operating-a-registered-charity/receiving-gifts/returning-a-gift-a-donor.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/returning-a-gift-a-donor.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/returning-a-gift-a-donor.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/returning-a-gift-a-donor.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/returning-a-gift-a-donor.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/reception-dons/retour-a-donateur.html"/>
 	
@@ -295,7 +295,7 @@ Returning a gift to a donor</h1>
 
     
         <h2 class="h4Size">When a registered charity must return gifts to donors</h2>
- <p>A charity is occasionally obliged by law to return gifts to donors. This can happen, for instance, when a charity asks the public to contribute to a special project and later events make it impossible to carry out the project. Under certain laws, ownership of the gifted property can revert to the donors if the project becomes impossible to fulfill.</p>  <p>The return of gifts to donors falls more appropriately under trust law than the Income Tax Act and is ultimately a matter for a court to decide. A charity may wish to consult legal counsel in these instances. We also strongly suggest that the charity, or its legal counsel&nbsp;see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-016-qualified-donees-consequences-returning-donated-property.html">Guidance CG-016, Qualified donees - Consequences of returning donated property</a>&nbsp;if it appears that the charity may have to return gifts to donors.</p>  
+ <p>A charity is occasionally obliged by law to return gifts to donors. This can happen, for instance, when a charity asks the public to contribute to a special project and later events make it impossible to carry out the project. Under certain laws, ownership of the gifted property can revert to the donors if the project becomes impossible to fulfill.</p>  <p>The return of gifts to donors falls more appropriately under trust law than the Income Tax Act and is ultimately a matter for a court to decide. A charity may wish to consult legal counsel in these instances. We also strongly suggest that the charity, or its legal counsel&nbsp;see <a href="https://cra-design.github.io/charities/policies-guidance/guidance-016-qualified-donees-consequences-returning-donated-property.html">Guidance CG-016, Qualified donees - Consequences of returning donated property</a>&nbsp;if it appears that the charity may have to return gifts to donors.</p>  
     
 
 
