--- a/operating-a-registered-charity/registration-number.html
+++ b/operating-a-registered-charity/registration-number.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/registration-number.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/registration-number.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/registration-number.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/numero-enregistrement.html"/>
 	
@@ -374,7 +374,7 @@ Registration number</h1>
     
         <h2>Related topics</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/making-changes/changing-a-charitys-legal-status.html">Changing a charity's legal status</a></li>
+<li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/making-changes/changing-a-charitys-legal-status.html">Changing a charity's legal status</a></li>
 </ul>
 
     
