--- a/operating-a-registered-charity/issuing-receipts/does-a-registered-charity-have-issue-official-donation-receipts-gifts-receives.html
+++ b/operating-a-registered-charity/issuing-receipts/does-a-registered-charity-have-issue-official-donation-receipts-gifts-receives.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/does-a-registered-charity-have-issue-official-donation-receipts-gifts-receives.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/issuing-receipts/does-a-registered-charity-have-issue-official-donation-receipts-gifts-receives.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/does-a-registered-charity-have-issue-official-donation-receipts-gifts-receives.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/issuing-receipts/does-a-registered-charity-have-issue-official-donation-receipts-gifts-receives.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/remise-recus/organisme-bienfaisance-est-tenu-remettre-recus-officiels-dons-dons-recoit.html"/>
 	
@@ -295,7 +295,7 @@ Does a registered charity have to issue official donation receipts for gifts it 
     
         <h2>Related topics</h2>
 <ul>
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
+ <li><a href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/what-a-gift.html">What is a gift?</a></li>
 </ul>   
     
 
