--- a/operating-a-registered-charity/receiving-gifts/anonymous-gifts.html
+++ b/operating-a-registered-charity/receiving-gifts/anonymous-gifts.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/anonymous-gifts.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/operating-a-registered-charity/receiving-gifts/anonymous-gifts.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/anonymous-gifts.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/operating-a-registered-charity/receiving-gifts/anonymous-gifts.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/exploitation-organisme-bienfaisance-enregistre/reception-dons/dons-anonymes.html"/>
 	
